index.htmlにScheduleView.jsの参照を追加

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
     
     <!-- JavaScriptの読み込み -->
     <script src="script.js"></script>
+    <script src="ScheduleView.js"></script>
     
     <!-- PWA登録 -->
     <script>
