--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
     
     <!-- JavaScriptの読み込み -->
     <script src="script.js"></script>
+    <script src="script_addons.js"></script>
     
     <!-- PWA登録 -->
     <script>
