講師画像のパスをimagesフォルダに変更

--- a/teachers.html
+++ b/teachers.html
@@ -85,7 +85,7 @@
                 <!-- 講師カード 1 -->
                 <div class="teacher-card" data-instrument="piano">
                     <div class="teacher-image">
-                        <img src="assets/teacher-tanaka.jpg" alt="田中先生" onerror="this.src='assets/teacher-placeholder.jpg'">
+                        <img src="images/teacher_piano.jpg" alt="田中先生" onerror="this.src='assets/teacher-placeholder.jpg'">
                     </div>
                     <div class="teacher-info">
                         <h2 class="teacher-name">田中 美紀</h2>
@@ -122,7 +122,7 @@
                 <!-- 講師カード 2 -->
                 <div class="teacher-card" data-instrument="guitar">
                     <div class="teacher-image">
-                        <img src="assets/teacher-suzuki.jpg" alt="鈴木先生" onerror="this.src='assets/teacher-placeholder.jpg'">
+                        <img src="images/teacher_e_gt.jpg" alt="鈴木先生" onerror="this.src='assets/teacher-placeholder.jpg'">
                     </div>
                     <div class="teacher-info">
                         <h2 class="teacher-name">鈴木 健太</h2>
@@ -161,7 +161,7 @@
                 <!-- 講師カード 3 -->
                 <div class="teacher-card" data-instrument="dtm">
                     <div class="teacher-image">
-                        <img src="assets/teacher-sato.jpg" alt="佐藤先生" onerror="this.src='assets/teacher-placeholder.jpg'">
+                        <img src="images/teacher_dtm.jpg" alt="佐藤先生" onerror="this.src='assets/teacher-placeholder.jpg'">
                     </div>
                     <div class="teacher-info">
                         <h2 class="teacher-name">佐藤 恵</h2>
@@ -198,7 +198,7 @@
                 <!-- 講師カード 4 -->
                 <div class="teacher-card" data-instrument="composition">
                     <div class="teacher-image">
-                        <img src="assets/teacher-nakamura.jpg" alt="中村先生" onerror="this.src='assets/teacher-placeholder.jpg'">
+                        <img src="images/teacher_comp.jpg" alt="中村先生" onerror="this.src='assets/teacher-placeholder.jpg'">
                     </div>
                     <div class="teacher-info">
                         <h2 class="teacher-name">中村 由美</h2>
@@ -237,7 +237,7 @@
                 <!-- 講師カード 5 -->
                 <div class="teacher-card" data-instrument="classical-guitar">
                     <div class="teacher-image">
-                        <img src="assets/teacher-yamamoto.jpg" alt="山本先生" onerror="this.src='assets/teacher-placeholder.jpg'">
+                        <img src="images/teacher_cla_gt.jpg" alt="山本先生" onerror="this.src='assets/teacher-placeholder.jpg'">
                     </div>
                     <div class="teacher-info">
                         <h2 class="teacher-name">山本 直樹</h2>
@@ -273,7 +273,7 @@
                 <!-- 講師カード 6 -->
                 <div class="teacher-card" data-instrument="bass">
                     <div class="teacher-image">
-                        <img src="assets/teacher-kato.jpg" alt="加藤先生" onerror="this.src='assets/teacher-placeholder.jpg'">
+                        <img src="images/teacher_bass.jpg" alt="加藤先生" onerror="this.src='assets/teacher-placeholder.jpg'">
                     </div>
                     <div class="teacher-info">
                         <h2 class="teacher-name">加藤 誠</h2>
