--- a/teachers.html
+++ b/teachers.html
@@ -24,12 +24,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <circle cx="12" cy="12" r="10"></circle>
-                    <circle cx="12" cy="12" r="2"></circle>
-                    <path d="M12 14 C 12 16.5 14 17 15.9 17 C 17.3 17 19 16.5 19 15 C 19 13.7 17.6 13 16 13 L 12 13"></path>
-                    <path d="M12 10 C 12 7.5 14 7 15.9 7 C 17.3 7 19 7.5 19 9 C 19 10.3 17.6 11 16 11 L 12 11"></path>
-                </svg>
+                <img src="music_school_logo_rem.png" alt="Melody Lab Logo" width="32" height="32">
                 <a href="index.html">MelodyLab</a>
             </div>
             
