--- a/teachers.html
+++ b/teachers.html
@@ -49,7 +49,7 @@
         <div class="teachers-container">
             <div class="teachers-header">
                 <h1>講師一覧</h1>
-                <p class="description">MelodyLabのオンラインレッスンを担当する講師陣をご紹介します。各講師の専門楽器や経歴をご覧いただけます。</p>
+                <p class="description">MelodyLabのオンラインレッスンを担当する講師陣をご紹介します。<br>各講師の専門楽器や経歴をご覧いただけます。</p>
                 
                 <div class="search-filter">
                     <div class="search-box">
