--- a/index.html
+++ b/index.html
@@ -62,12 +62,10 @@
                             <option value="all">すべて</option>
                             <option value="piano">ピアノ</option>
                             <option value="guitar">ギター</option>
-                            <option value="violin">バイオリン</option>
-                            <option value="vocal">ボーカル</option>
-                            <option value="drums">ドラム</option>
+                            <option value="violin">DTM</option>
+                            <option value="vocal">作曲</option>
+                            <option value="drums">クラシックギター</option>
                             <option value="bass">ベース</option>
-                            <option value="flute">フルート</option>
-                            <option value="saxophone">サックス</option>
                         </select>
                     </div>
                     
@@ -77,9 +75,9 @@
                             <option value="all">すべての講師</option>
                             <option value="tanaka">田中先生（ピアノ）</option>
                             <option value="suzuki">鈴木先生（ギター）</option>
-                            <option value="sato">佐藤先生（バイオリン）</option>
-                            <option value="nakamura">中村先生（ボーカル）</option>
-                            <option value="yamamoto">山本先生（ドラム）</option>
+                            <option value="sato">佐藤先生（DTM）</option>
+                            <option value="nakamura">中村先生（作曲）</option>
+                            <option value="yamamoto">山本先生（クラシックギター）</option>
                             <option value="kato">加藤先生（ベース）</option>
                         </select>
                     </div>
