--- a/admin/schedule-setup.html
+++ b/admin/schedule-setup.html
@@ -414,15 +414,11 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="music_school_logo_rem.png" alt="Melody Lab Logo" width="32" height="32">
+                <img src="images/music_school_logo_rem.png" alt="Melody Lab Logo" width="32" height="32">
                 <a href="index.html">MelodyLab</a>
             </div>
             <h1 style="margin-left: auto; color: #2c3e50;">📅 スケジュール設定</h1>
         </header>
-        
-        <div class="page-description" style="background: white; border-radius: 12px; padding: 24px; margin-bottom: 24px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-            <p>レッスンスケジュールを効率的に管理しましょう</p>
-        </div>
 
         <div class="tabs">
             <div class="tab active" onclick="switchTab('weekly')">週間スケジュール</div>
