--- a/admin/schedule-setup.html
+++ b/admin/schedule-setup.html
@@ -414,7 +414,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="music_school_logo_rem.png" alt="Melody Lab Logo" width="32" height="32">
+                <img src="../music_school_logo_rem.png" alt="Melody Lab Logo" width="32" height="32">
                 <a href="index.html">MelodyLab</a>
             </div>
             <h1 style="margin-left: auto; color: #2c3e50;">📅 スケジュール設定</h1>
