--- a/admin/schedule-setup.html
+++ b/admin/schedule-setup.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>スケジュール設定 - MelodyLab</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
+
     <style>
         * {
             margin: 0;
@@ -11,8 +16,8 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: 'Hiragino Sans', 'Yu Gothic UI', sans-serif;
+        bbody {
+            font-family: 'Noto Sans JP', 'Hiragino Sans', 'Yu Gothic UI', sans-serif;
             background-color: #f8f9fa;
             color: #333;
             line-height: 1.6;
