--- a/admin/schedule-setup.html
+++ b/admin/schedule-setup.html
@@ -16,7 +16,7 @@
             box-sizing: border-box;
         }
 
-        bbody {
+        body {
             font-family: 'Noto Sans JP', 'Hiragino Sans', 'Yu Gothic UI', sans-serif;
             background-color: #f8f9fa;
             color: #333;
