--- a/admin/schedule-setup.html
+++ b/admin/schedule-setup.html
@@ -644,8 +644,8 @@
                     <label class="form-label">デフォルトレッスン時間</label>
                     <select class="form-select">
                         <option value="30">30分</option>
-                        <option value="45">45分</option>
-                        <option value="60" selected>60分</option>
+                        <option value="45" selected>45分</option>
+                        <option value="60">60分</option>
                         <option value="90">90分</option>
                     </select>
                 </div>
@@ -653,10 +653,10 @@
                 <div class="form-group">
                     <label class="form-label">レッスン間の休憩時間</label>
                     <select class="form-select">
+                        <option value="なし" selected>なし</option>
                         <option value="5">5分</option>
-                        <option value="10" selected>10分</option>
+                        <option value="10">10分</option>
                         <option value="15">15分</option>
-                        <option value="20">20分</option>
                     </select>
                 </div>
 
