スケジュール設定ボタンをホバー時色変更スタイルに変更

--- a/admin/teacher-dashboard.html
+++ b/admin/teacher-dashboard.html
@@ -20,7 +20,7 @@
             </div>
             
             <div class="dashboard-actions">
-                <button class="btn btn-primary" onclick="location.href='schedule-setup.html'">
+                <button class="btn btn-outline" onclick="location.href='schedule-setup.html'">
                     📅 スケジュール設定
                 </button>
                 <button class="btn btn-outline" onclick="location.href='../index.html'">
