--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="schedule-grid.css">
 </head>
+
+<!-- 無料体験レッスンバナー（ヘッダー直後に追加） -->
+<div class="trial-lesson-banner" id="trial-banner">
+    <div class="trial-content">
+        <span class="trial-icon">✨</span>
+        <span class="trial-text">無料体験レッスン実施中</span>
+        <button class="trial-close" id="trial-close" aria-label="バナーを閉じる">×</button>
+    </div>
+</div>
+    
 <body>
     <div class="container">
         <header>
